--- a/Git_Install.yml
+++ b/Git_Install.yml
@@ -2,7 +2,7 @@
   name: play on sample execution
   hosts: client1
   tasks:
-   - name: code to remove git
+   - name: code to install git
      yum: 
       name: git
       state: present
